--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -12,3 +12,10 @@
   width: 100%;
   margin: 0 auto;
 }
+
+@media (max-width: 720px) {
+  .layout-main {
+    padding: 14px;
+    padding-bottom: 104px;
+  }
+}
